<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        tools:layout_editor_absoluteY="62dp" />

    <Button
        android:id="@+id/createJokeButton"
        android:layout_width="150dp"
        android:layout_height="57dp"
        android:layout_marginTop="60dp"
        android:text="@string/new_joke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting" />

    <Button
        android:id="@+id/favoriteJokeButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_joke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createJokeButton" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoriteJokeButton" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="146dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeButton" />
</androidx.constraintlayout.widget.ConstraintLayout>